# VASTKnowledgeGraphVisualization

./: README.md
data/: .gitignore
docs/: meeting_1_notes.md
eda/: .gitignore  MC1.ipynb  pyproject.toml  sankey_application.py
frontend/: package-lock.json  package.json
frontend/src/components/: DashboardCard.vue
frontend/src/views/: HomeView.vue
