[project]
name = "eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "dash>=4.1.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
]
